# learn_opengl

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: build_and_run.yml
apps/: CMakeLists.txt  MyGame.cpp  MyGame.h  main.cpp
assets/shader/: colored.fragment.shader  diffuse-and-specular.textured.fragment.shader  diffuse.textured.fragment.shader  fragment.diffuse-and-specular-textured.shader  fragment.double-textured.shader  fragment.main.shader  fragment.mono-texture.shader  fragment.no-light.shader  fragment.shader  fragment.simple-color.shader  fragment.simple-light.shader  lightFragment.shader  textured.fragment.shader  vertex.shader
cmake/: find_glad.cmake  find_glfw.cmake  find_glm.cmake  find_stb.cmake
gl_lib/: CMakeLists.txt
gl_lib/src/: ColorfulTriangle.h  Drawable.h  ElementBufferObject.h  OpenGl.cpp  OpenGl.h  Point.h  Rectangle.h  RuntimeException.h  Shader.h  Triangle.h  Typedefs.h  VertexModel.h  VertexModels.h
gl_test/: CMakeLists.txt
gl_test/src/: ElementBufferObject-test.cpp  Rectangle-test.cpp  TestModels.h  Triangle-test.cpp  VertexModels-test.cpp  runTests.cpp
include/gl_lib/: Camera.h  ColorfulTriangle.h  Context.h  ContextContainer.h  Cube.h  DiffuseAndSpecularTextured.h  DiffuseTextured.h  DirectionalLight.h  Drawable.h  DrawableDecorator.h  FileTexture.h  FlashLight.h  Game.h  Image.h  LightSource.h  LightSourceId.h  Model.h  ModelAdapter.h  MouseInputAdapter.h  MouseInputHandler.h  MousePosition.h  MovingInOrbit.h  OpenGl.h  OpenGlBuffer.h  PointLight.h  Rectangle.h  Rotating.h  RuntimeException.h  Shader.h  ShaderInitializationException.h  SimpleColored.h  Texture.h  TextureUnit.h  Textured.h  TexturedRectangle.h  TexturedTriangle.h  Triangle.h  Typedefs.h  Vertices.h  Watch.h  (+1 more)
src/: CMakeLists.txt  Camera.cpp  ColorfulTriangle.cpp  ContextContainer.cpp  Cube.cpp  DiffuseAndSpecularTextured.cpp  DiffuseTextured.cpp  DirectionalLight.cpp  Drawable.cpp  FileTexture.cpp  FlashLight.cpp  Image.cpp  LightSource.cpp  LightSourceId.cpp  ModelAdapter.cpp  MouseInputAdapter.cpp  MousePosition.cpp  MovingInOrbit.cpp  OpenGl.cpp  OpenGlBuffer.cpp  PointLight.cpp  Rectangle.cpp  Rotating.cpp  RuntimeException.h  Shader.cpp  ShaderInitializationException.h  SimpleColored.cpp  Texture.cpp  TextureUnit.cpp  Textured.cpp  TexturedRectangle.cpp  TexturedTriangle.cpp  Triangle.cpp  Vertices.cpp  Watch.cpp  gl_lib.cpp
tests/: CMakeLists.txt  TestModels.h  Triangle-test.cpp  Vertices-test.cpp
